build: rename app

--- a/app/index.html
+++ b/app/index.html
@@ -21,14 +21,14 @@
     <!--  -->
     
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/e-cart-app.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/ember-cart.css">
     {{content-for "head-footer"}}
   </head>
   <body>
     {{content-for "body"}}
 
     <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/e-cart-app.js"></script>
+    <script src="{{rootURL}}assets/ember-cart.js"></script>
 
     {{content-for "body-footer"}}
   </body>
